[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kit4dl"
description = "Kit4DL - A quick way to start with machine and deep learning"
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["deep learning", "training pipeline"]
dynamic = ["version"]
authors = [
    {name = "Jakub Walczak"},
    {name = "Marco Mancini"},
    {name = "Mirko Stojiljkovic"},
    {name = "Shahbaz Alvi"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "lightning<=2.1.0.rc0",
    "torch>=1.11.0,<2.1.0",
    "torchmetrics>=0.7.0,<1.1.0",
    "numpy>=1.17.2,<=1.25.3",
    "pydantic>=2.0.0,<2.2.0",
    "scikit-learn",
    "colormath",
    "tqdm>=4.57.0,<4.67.0",
    "typing-extensions>=4.0.0,<4.8.0; python_version<='3.11'",
    "Jinja2<3.2.0",
    "typer[all]",
    "toml; python_version<'3.11'"
]

[tool.setuptools.dynamic]
version = {attr = "kit4dl._version.__version__"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["examples*"]

[tool.pydocstyle]

[tool.isort]
profile = "black"
include_trailing_comma = true
line_length = 79
overwrite_in_place = true
use_parentheses = true

[tool.black]
line_length = 79
preview = true

[tool.mypy]
files = [
    "kit4dl", "."
]
exclude = ["tests/", "examples/"]

[project.scripts]
kit4dl = "kit4dl.cli.app:run"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]
